--- a/src/app/components/watchlist/watchlist.html
+++ b/src/app/components/watchlist/watchlist.html
@@ -1,13 +1,27 @@
 <div class="watchlist-container">
     <div class="header-actions">
-        <button mat-button (click)="back()">back</button>
-        <button mat-button (click)="refresh()">refresh</button>
+        <button mat-button (click)="back()">
+            <mat-icon fontIcon="arrow_back"></mat-icon>
+            Back
+        </button>
+        <button mat-button (click)="refresh()">
+            <mat-icon fontIcon="refresh"></mat-icon>
+            Refresh
+        </button>
+        <span class="spacer"></span>
+        <mat-form-field appearance="outline" class="monitoring-select dense">
+            <mat-select [(value)]="selectedMonitoringFilter" (selectionChange)="applyMonitoringFilter()" placeholder="Monitoring">
+                <mat-option value="ALL">ALL</mat-option>
+                <mat-option value="ACTIVEMONITORING">ACTIVEMONITORING</mat-option>
+                <mat-option value="NO MONITORING">NO MONITORING</mat-option>
+            </mat-select>
+        </mat-form-field>
     </div>
 
     <div class="scrollable-list">
         <!-- Group 1: BTC-DIV -->
         <h3 class="group-label">BTC-DIV</h3>
-        <mat-card *ngFor="let item of btcDivItems" class="watchlist-row-card"
+        <mat-card *ngFor="let item of btcDivItemsFiltered" class="watchlist-row-card"
             (click)="goToChart(item.Symbol, item.Timeframe)">
             <div class="row-top">
                 <span class="symbol">{{ item.Symbol }}</span>
@@ -28,7 +42,7 @@
 
         <!-- Group 2: Other statuses -->
         <h3 class="group-label">Other</h3>
-        <mat-card *ngFor="let item of otherItems" class="watchlist-row-card"
+        <mat-card *ngFor="let item of otherItemsFiltered" class="watchlist-row-card"
             (click)="goToChart(item.Symbol, item.Timeframe)">
             <div class="row-top">
                 <span class="symbol">{{ item.Symbol }}</span>
