--- a/src/app/components/chart/chart-component.scss
+++ b/src/app/components/chart/chart-component.scss
@@ -4,8 +4,8 @@
   display: flex;
   flex-direction: column;
   /* Use full viewport height; bottom padding accounts for footer so content not hidden */
-  min-height: 100dvh;
-  height: 100dvh;
+  min-height: 100%;
+  height: 100%;
   font-family:
     -apple-system, BlinkMacSystemFont, "Trebuchet MS", Roboto, Ubuntu,
     sans-serif;
@@ -17,7 +17,7 @@
 :host {
   display: block;
   height: 100%;
-  max-height: 100dvh;
+  max-height: 100%;
   overflow: hidden;
 }
 
