--- a/src/app/components/footer/footer-compenent.html
+++ b/src/app/components/footer/footer-compenent.html
@@ -14,6 +14,11 @@
     <span>Watchlist</span>
   </button>
 
+  <button mat-button (click)="navigate('balance')">
+    <mat-icon>account_balance</mat-icon>
+    <span>Balance</span>
+  </button>
+
   <button mat-button (click)="navigate('dashboard')">
     <mat-icon>settings</mat-icon>
     <span>Settings</span>
